db/repl/rs_initiate.cpp
@@ -166,7 +166,7 @@ namespace mongo {
                 bob members;
                 members.append("0", BSON( "_id" << 0 << "host" << HostAndPort::Me().toString() ));
                 for( unsigned i = 0; i < seeds.size(); i++ )
-                    members.append(bob::numStr(i), BSON( "_id" << i << "host" << seeds[i].toString()));
+                    members.append(bob::numStr(i+1), BSON( "_id" << i+1 << "host" << seeds[i].toString()));
                 b.appendArray("members", members.obj());
                 configObj = b.obj();
                 log() << "replSet created this configuration for initiation : " << configObj.toString() << rsLog;
